--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node index.js",
-    "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "debug": "cross-env NODE_ENV=development nodemon index.js"
+    "start": "cross-env NODE_ENV=production node  ./dist/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon ./dist/index.js",
+    "watch": "tsc -w"
   },
   "keywords": [],
   "author": "Janne Fagerström",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.13"
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.3",
+    "@types/pg": "^8.6.5",
+    "nodemon": "^2.0.13",
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "cors": "^2.8.5",
