--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/papaparse": "^5.3.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "jquery-csv": "^1.0.21",
+    "papaparse": "^5.3.2",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.38"
