--- a/src/client-hpo/package.json
+++ b/src/client-hpo/package.json
@@ -7,6 +7,7 @@
     "papaparse": "^5.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3"
   },
   "scripts": {
