--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/papaparse": "^5.3.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "papaparse": "^5.3.2",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
