--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "papaparse": "^5.3.2",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.5.1",
     "typeorm": "^0.2.38"
   }
 }
