--- a/src/client-hpo/package.json
+++ b/src/client-hpo/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.9.2",
     "axios": "^0.23.0",
     "papaparse": "^5.3.2",
     "react": "^17.0.2",
